# Topl

./: .gitmodules  BUILDING.md  CMakeLists.txt  INFO.md  LICENSE  README.md  externalTargets.cmake  findVulkan.cmake  legacyDemos.cmake  locateVulkan.cmake  runTests.cmake  thirdParty.cmake
assets/images/: Logo.tiff
assets/models/: Dreidel.fbx  SpinTop.dae  SpinTop.fbx  SpinTop.glb  SpinTop.ply  UrkwinAlien.fbx  UrkwinAlien.mtl  cube.glb  cuboctahedron.glb  dodecahedron.glb  greatrhombicosidodecahedron.glb  greatrhombicuboctahedron.glb  icosahedron.glb  icosidodecahedron.glb  octahedron.glb  smallrhombicosidodecahedron.glb  smallrhombicuboctahedron.glb  snubcube.glb  snubdodecahedron.glb  tetrahedron.glb  truncatedcube.glb  truncateddodecahedron.glb  truncatedicosahedron.glb  truncatedoctahedron.glb  truncatedtetrahedron.glb
assets/others/: resource.aps  resource.rc
assets/res/: MyScene.tp  resource.aps  resource.h  resource.rc
cmake/: assetTargets.cmake  engineTargets.cmake  externalTargets.cmake  installTargets.cmake  internalTargets.cmake  legacyDemos.cmake  resourceTargets.cmake  runTests.cmake  shaderTargets.cmake
core/: File3D.cpp  File3D.hpp  FileIO.cpp  FileIO.hpp  GUI.h  Geometry.cpp  Geometry.hpp  Input.cpp  Input.hpp  Maths.h  Physic.hpp  Physics.cpp  Physics.h  Physics.hpp  Platform.cpp  Platform.hpp  Timer.cpp  Timer.hpp  Topl_App.cpp  Topl_App.hpp  Topl_Camera.hpp  Topl_Factory.cpp  Topl_Factory.hpp  Topl_Graphics.hpp  Topl_Graphics_Drx11.hpp  Topl_Graphics_GL4.hpp  Topl_Image.h  Topl_Images.h  Topl_Main.cpp  Topl_Main.hpp  Topl_Pipeline.h  Topl_Pipeline.hpp  Topl_Pipeline_Drx11.cpp  Topl_Pipeline_GL4.cpp  Topl_Program.cpp  Topl_Program.hpp  Topl_Renderer.cpp  Topl_Renderer.hpp  Topl_Renderer_Drx11.cpp  Topl_Renderer_Drx11.hpp  (+30 more)
core/Geometry/: CircleUp.cpp  Geometry_Constructs.hpp  QuadTileTree.cpp  QuadTileTree.hpp  RandShapes.cpp
core/directx/: Topl_Pipeline_DX11.cpp  Topl_Pipeline_Drx11.cpp  Topl_Renderer_DX11.cpp  Topl_Renderer_DX11.hpp  Topl_Renderer_Drx11.cpp  Topl_Renderer_Drx11.hpp
core/opengl/: Topl_Pipeline_GL4.cpp  Topl_Renderer_GL4.cpp  Topl_Renderer_GL4.hpp
core/program/: Topl_Program.cpp  Topl_Program.hpp  Topl_Program_Pipelines.cpp  Topl_Program_Runner.cpp  Topl_Program_Timeline.cpp  Topl_Timeline.cpp  Topl_Timeline.hpp
core/renderer/: Topl_Renderer.cpp  Topl_Renderer.hpp
core/scene/: Topl_Camera.hpp  Topl_Scene.cpp  Topl_Scene.hpp  Topl_Scene_Dynamics.cpp
core/vulkan/: Topl_Pipeline_Vulkan.cpp  Topl_Renderer_Vulkan.cpp  Topl_Renderer_Vulkan.hpp
demos/: 3DView.cpp  3DView.hpp  3DViewer.cpp  3DViewer.hpp  Animatrix.cpp  Animatrix.hpp  Animotion.cpp  Animotion.hpp  Assets.hpp  Blocks.hpp  Brush3D.cpp  Brush3D.hpp  Builder.cpp  Builder.hpp  Canvas.hpp  Commotion.hpp  DemoDrx11_Capture.cpp  DemoDrx11_Init.cpp  DemoDrx11_MovingSprite.cpp  DemoDrx11_QuadTree.cpp  DemoDrx11_Shapes.cpp  DemoDrx11_Swings.cpp  DemoDrx12_Init.cpp  DemoGL4_Capture.cpp  DemoGL4_Init.cpp  DemoGL4_MovingSprite.cpp  DemoGL4_Shapes.cpp  DemoGL4_Swings.cpp  DemoImg.cpp  DemoPresser.cpp  DemoTickTick.cpp  Demo_Cursor.cpp  Demo_Img.cpp  Demo_Parse3D.cpp  Demo_ParseFBX.cpp  Diagnostic.cpp  Diagnostic.hpp  Drx11_Assets.cpp  Drx11_Blocks.cpp  Drx11_Canvas.cpp  (+79 more)
demos/animatrix/: Animatrix.cpp  Animatrix.hpp
demos/cubegate/: Cubegate.cpp  Cubegate.hpp  Cubegate_Construct.h
demos/entropy/: Entropy.cpp  Entropy.hpp
demos/genesis/: Genesis.cpp  Genesis.hpp
demos/hello/: Hello.cpp  Hello.hpp
demos/kaleidoscope/: Construct.h  Kaleidoscope.cpp  Kaleidoscope.hpp  Kaleidoscope_Construct.h
demos/legacy/: Assets.hpp  Blocks.hpp  Drx11_Assets.cpp  Drx11_Blocks.cpp  Drx11_Overlay.cpp  Drx11_Pawns.cpp  Drx11_Planetary.cpp  Drx11_Surface.cpp  GL4_Assets.cpp  GL4_Blocks.cpp  GL4_Overlay.cpp  GL4_Pawns.cpp  GL4_Planetary.cpp  GL4_Surface.cpp  Overlay.hpp  Pawns.hpp  Planetary.hpp  Surface.hpp
demos/meshform/: Functions.h  Meshform.cpp  Meshform.hpp  Meshform_Functions.h  Meshform_Transforms.h  callbacks.cpp
demos/molecular/: Construct.h  Molecular.cpp  (+2 more)
geo/: Chain.cpp  Chain.hpp  Character1.cpp  CircleUp.cpp  Geo_Actor.hpp  Geo_Component.hpp  Geo_Construct.cpp  Geo_Construct.hpp  Geo_Constructs.hpp  Geo_SpriteTable.cpp  Geo_SpriteTable.hpp  Geo_Tree.cpp  Geo_Tree.hpp  Geo_Troupe.cpp  Geo_Troupe.hpp  Geometry.cpp  Geometry.hpp  Geometry_Constructs.hpp  Humanoid.cpp  Humanoid.hpp  QuadTileTree.cpp  RandShapes.cpp  ShapesGen.cpp  ShapesGen.hpp
geometry/: Geo_Actor.hpp  Geo_Construct.hpp  Geo_Mesh.cpp  Geo_Mesh.hpp  Geo_SpriteTable.cpp  Geo_SpriteTable.hpp  Geo_Tree.cpp  Geo_Tree.hpp  Geo_Vertex.cpp  Geo_Vertex.hpp  Geometry.cpp  Geometry.hpp  ShapesGen.cpp  ShapesGen.hpp
helper/: Controls.cpp  Controls.hpp  FileIO.hpp  IO.cpp  IO.hpp  Input.cpp  Input.hpp  Platform.cpp  Platform.hpp  Timer.hpp  ValueGen.cpp  ValueGen.hpp  d3dx10.h  d3dx12.h  glew.c  image_type.h  native_os_def.h  physics.h  support_def.h  support_def.h.in
physics/: Phys_Actor.h  Phys_Connector.h  Phys_Motion.h
scene/: Topl_Scene.hpp  Topl_SceneManager.hpp  Topl_Scene_Builder.cpp  Topl_Scene_Physics.cpp
shaders/: Advance_Shader.hpp  Beams_Shader.hpp  Canvas_Shader.hpp  Colorcode_Shader.hpp  Colored_Shader.hpp  Construct_Shader.hpp  Dynamic_Shader.hpp  Effect_Shader.hpp  Experimental_Shader.hpp  Field_Shader.hpp  Flat_Shader.hpp  Forge_Shader.hpp  FragShader.glsl  Frag_Basic.glsl  Frag_ColorWheel.glsl  Frag_Flat.glsl  Frag_Flat.hlsl  Frag_FrameFx.glsl  Frag_Playdough.glsl  Frag_Swirls.glsl  Idle_Shader.hpp  Material_Shader.hpp  Pattern_Shader.hpp  Pixel_FrameFx.hlsl  Pixel_MostBasic.hlsl  Spectral_Shader.hpp  Textured_Shader.hpp  VertexShader.glsl  Vertex_Basic.glsl  Vertex_Basic.hlsl  Vertex_ColorWheel.glsl  Vertex_Flat.glsl  Vertex_Flat.hlsl  Vertex_FrameFx.glsl  Vertex_FrameFx.hlsl  Vertex_MostBasic.hlsl  Vertex_Playdough.glsl  Vertex_Volumes.glsl  Vertex_Volumes.hlsl  topl.shaderbundle.json
support/: Controls.cpp  Controls.hpp  IO.cpp  IO.hpp  Platform.cpp  Platform.hpp  Timer.cpp  Timer.hpp  ValueGen.cpp  ValueGen.hpp  image_wrapper.h  maths.h  native_os_def.h  support_def.h  support_def.h.in
(+441 files in other folders)
